# lab1-rsoi

./: Dockerfile  docker-compose.yml
.github/workflows/: classroom.yml
postgres/: 20-create-persons-table.sql
src/: CMakeLists.txt  Dockerfile.run
src/base/: CMakeLists.txt
src/base/config_utils/: config_creators.cpp  yaml_config.cpp  yaml_config.h
src/base/include/config/: IConfig.h  base_constants.h  config_creators.h
src/base/include/exceptions/: base_exception.h  database_exceptions.h  logic_exceptions.h  server_exceptions.h
src/base/include/logger/: ILogger.h  LoggerFactory.h
src/base/logger/: Logger.cpp  Logger.h  LoggerFactory.cpp
src/cmake/: common.cmake  libs.cmake
src/network_library/: CMakeLists.txt  net.cpp
src/network_library/base/: BeastResponseFactory.cpp  BeastResponseFactory.h  IResposeFactory.cpp  Request.cpp  Request.h  Response.cpp  Response.h
src/network_library/connections/: client_server_connection.cpp  client_server_connection.h  server_connection.cpp  server_connection.h
src/network_library/coroutines/: future.h  http_read_awaiter.cpp  http_read_awaiter.h  http_write_awaiter.cpp  http_write_awaiter.h  read_awaiter.cpp  read_awaiter.h  write_awaiter.cpp  write_awaiter.h
src/network_library/include/network/: IClientServerSession.h  IConnection.h  IServerSession.h  net.h  net_asio.h
src/network_library/include/request_handler/: IClientServerRequestHandler.h  IServerRequestHandler.h
src/network_library/include/request_response_support/: IResponseFactory.h  RequestResponse.h
src/network_library/include/router/: IClientServerRoute.h  IRequestHandlerContext.h  router.h
src/network_library/router/: RequestHandlerContext.cpp  RequestHandlerContext.h  router.cpp
src/network_library/sessions/: echo_session.cpp  echo_session.h  http_client_server_session.cpp  http_client_server_session.h  http_session.cpp  http_session.h
src/person_backend/: CMakeLists.txt  main.cpp  persons.yaml
src/person_backend/data_transfer_object/: PersonDTO.cpp  PersonDTO.h  PersonPatchDTO.h  PersonPostDTO.cpp  PersonPostDTO.h
src/person_backend/database_manager/: IPersonsRepository.h  PersonsDA.cpp  PersonsDA.h  PostgresPersonsRepository.cpp  PostgresPersonsRepository.h
src/person_backend/person_facade/: person_facade.cpp  person_facade.h
src/person_backend/unit_tests/: CMakeLists.txt  PersonFacadeTest.cpp  PersonFacadeTest.h  PersonsRepositoryMock.h  main.cpp
src/person_backend/utils/: PersonServerHandler.cpp  PersonsGateway.cpp  PersonsServerHandler.h
